syntax = "proto3";
package pb;

import "gogoproto/gogo.proto";
import "concord/pb/types.proto";
import "tendermint/libs/bits/types.proto";

// NewRoundStep is sent for every step taken in the ConsensusState.
// For every height/round/step transition
message NewRoundStep {
  int64  height                   = 1;
  int32  round                    = 2;
  uint32 step                     = 3;
  int64  seconds_since_start_time = 4;
  int32  last_commit_round        = 5;
}

// NewValidBlock is sent when a validator observes a valid block B in some round r,
//i.e., there is a Proposal for block B and 2/3+ prevotes for the block B in the round r.
// In case the block is also committed, then IsCommit flag is set to true.
message NewValidBlock {
  int64                          height                = 1;
  int32                          round                 = 2;
  tendermint.libs.bits.BitArray  block_parts           = 4;
  bool                           is_commit             = 5;
}

// ProposalPOL is sent when a previous proposal is re-proposed.
message ProposalPOL {
  int64                         height             = 1;
  int32                         proposal_pol_round = 2;
  tendermint.libs.bits.BitArray proposal_pol       = 3 [(gogoproto.nullable) = false];
}

// HasVote is sent to indicate that a particular vote has been received.
message HasVote {
  int64                          height = 1;
  int32                          round  = 2;
  SignedMsgType type   = 3;
  int32                          index  = 4;
}

// VoteSetMaj23 is sent to indicate that a given BlockID has seen +2/3 votes.
message VoteSetMaj23 {
  int64                          height   = 1;
  int32                          round    = 2;
  SignedMsgType type     = 3;
  DataHash       data_hash = 4 [(gogoproto.customname) = "DataHash", (gogoproto.nullable) = false];
}

// VoteSetBits is sent to communicate the bit-array of votes seen for the BlockID.
message VoteSetBits {
  int64                          height   = 1;
  int32                          round    = 2;
  SignedMsgType type     = 3;
  DataHash       data_hash = 4 [(gogoproto.customname) = "DataHash", (gogoproto.nullable) = false];
  tendermint.libs.bits.BitArray  votes    = 5 [(gogoproto.nullable) = false];
}

message Message {
  oneof sum {
    NewRoundStep  new_round_step  = 1;
    NewValidBlock new_valid_block = 2;
    Proposal      proposal        = 3;
    ProposalPOL   proposal_pol    = 4;
    Vote          vote            = 6;
    HasVote       has_vote        = 7;
    VoteSetMaj23  vote_set_maj23  = 8;
    VoteSetBits   vote_set_bits   = 9;
  }
}
